[package]
name = "blst-deno"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bls-signatures = "0.15.0"
bls12_381 = "0.8.0"
console_error_panic_hook = "0.1.7"
deno_bindgen = "0.8.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.87"
